--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+black==22.3.0
+click==8.1.3
 Django==3.2.13
 django-allauth==0.41.0
 django-crispy-forms==1.14.0
+django-livereload-server==0.4
 heroku==0.1.4
 oauthlib==3.2.0
+pathspec==0.9.0
 Pillow==9.1.1
 PyJWT==2.4.0
 python-dateutil==1.5
