--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ black==22.3.0
 click==8.1.3
 Django==3.2.13
 django-allauth==0.41.0
+django-countries==7.3.2
 django-crispy-forms==1.14.0
 django-livereload-server==0.4
 heroku==0.1.4
