--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 backports.zoneinfo==0.2.1
 black==22.3.0
 click==8.1.3
+dj-database-url==0.5.0
 Django==3.2.13
 django-allauth==0.41.0
 django-countries==7.3.2
@@ -11,6 +12,7 @@ heroku==0.1.4
 oauthlib==3.2.0
 pathspec==0.9.0
 Pillow==9.1.1
+psycopg2-binary==2.9.3
 PyJWT==2.4.0
 python-dateutil==1.5
 python3-openid==3.2.0
