--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ Pillow==9.1.1
 psycopg2-binary==2.9.3
 PyJWT==2.4.0
 python-dateutil==1.5
+python3==3.10.3
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
