--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 black==22.3.0
+boto3==1.24.22
+botocore==1.27.22
 click==8.1.3
 dj-database-url==0.5.0
 Django==3.2.13
@@ -8,8 +10,10 @@ django-allauth==0.41.0
 django-countries==7.3.2
 django-crispy-forms==1.14.0
 django-livereload-server==0.4
+django-storages==1.12.3
 gunicorn==20.1.0
 heroku==0.1.4
+jmespath==1.0.1
 oauthlib==3.2.0
 pathspec==0.9.0
 Pillow==9.1.1
@@ -19,5 +23,6 @@ python-dateutil==1.5
 python3-openid==3.2.0
 pytz==2022.1
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 sqlparse==0.4.2
 stripe==3.2.0
