--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ django-crispy-forms==1.14.0
 django-livereload-server==0.4
 django-storages==1.12.3
 gunicorn==20.1.0
-heroku==0.1.4
+heroku3==5.1.4
 jmespath==1.0.1
 oauthlib==3.2.0
 pathspec==0.9.0
