--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.4
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
 black==22.3.0
@@ -13,16 +14,34 @@ django-livereload-server==0.4
 django-storages==1.12.3
 gunicorn==20.1.0
 heroku3==5.1.4
+iniconfig==1.1.1
 jmespath==1.0.1
+lxml==4.9.1
 oauthlib==3.2.0
 pathspec==0.9.0
 Pillow==9.1.1
+pluggy==1.0.0
 psycopg2-binary==2.9.3
+py==1.11.0
+pybrowsers==0.4.1
 PyJWT==2.4.0
+pytest==6.2.5
+pytest-base-url==1.4.2
+pytest-html==3.1.1
+pytest-metadata==2.0.1
+pytest-selenium==3.0.0
+pytest-variables==1.9.0
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 python3-openid==3.2.0
 pytz==2022.1
+pyxdg==0.27
 requests-oauthlib==1.3.1
 s3transfer==0.6.0
+selenium==3.141.0
 sqlparse==0.4.2
 stripe==3.2.0
+tenacity==6.3.1
+tqdm==4.64.0
+webdriver-manager==3.8.0
+webdrivermanager==0.10.0
